# terminator-plugins

./: .gitignore  LICENSE  README.md  SHA256SUMS
terminator-full-select/: .gitignore  README.md  SHA256SUMS  full_select_visual_prototype.py
terminator-full-select/full_select_native/: meson.build  tfse_engine.c  tfse_engine.h
terminator-full-select/packaging/: install.sh  uninstall.sh
terminator-full-select/scripts/: build-binary-package.sh  install-developer.sh  update-source-checksums.sh  verify-native-binary.py
terminator-full-select/tests/: fail-state-mv.sh  test-packaging.sh
